--- a/app/package.json
+++ b/app/package.json
@@ -24,8 +24,8 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
+    "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-app-rewired start",
+    "build": "set NODE_OPTIONS=--openssl-legacy-provider && react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject"
   },
